tests/cfg/js/success/compile_dowhile.js
do {
  debugger;
  done: {
    break done;
  }
  continue;
  function f(a, b) {
    a[b];
  }
} while (true);
