tests/cfg/js/error/astRewrite/ast_disamb1.js
do { done:
  done: continue done;
  continue none;
  } while (true)

break;
done: break none;

done: {
  done:
    break done;
  break done;
}

try {}
catch (x) {
  x;
}
